--- a/Admission1.html
+++ b/Admission1.html
@@ -81,9 +81,9 @@
     <div class="about_us">
         <div class="about_content">
             <h2 class="ab" style="text-align: left;">Welcome to AIT - Admissions</h2>
-            <p class="about_content" style="width: 27.81rem;">The Birla Institute of Technology and Science (BITS) Pilani, recognized as an “Institution of Eminence” by Ministry of Education, Government of India, is India’s leading Institute of Higher Education and a deemed to be university, with an illustrious legacy, modern campuses and eminent alumni in leadership positions across the world.</p>
+            <p class="about_content" style="width: 27.81rem;">The admission section of the AIT website furnishes vital information for prospective students seeking admission to our institution. It offers clear guidelines on eligibility criteria, application procedures, and important deadlines for undergraduate and postgraduate programs. Additionally, detailed instructions on document submission, fee structures, and available scholarships are provided to facilitate a smooth application process.</p>
             </br>
-            <p class="about_content" style="width: 27.81rem;">The Institute's commitment to excellence, adherence to merit, transparency, innovation, and enterprise have characterized its steady march to eminence. It is the only Private University which DST, Government of India has identified to establish a Technology Innovation Hub under the Bio-CPS vertical with a grant of Rs 125 Crore.</p>
+            <p class="about_content" style="width: 27.81rem;">Prospective applicants can find comprehensive information to guide them through each step of the admission process. From understanding eligibility requirements to navigating the application procedure, the admission section aims to empower students with the knowledge they need to pursue their academic goals at AIT. Additionally, details on scholarships and financial aid options underscore our commitment to ensuring accessibility and affordability for all deserving candidates.</p>
         </div>
         <div class="rectangle_blue"></div>
         <div class="about_image">
