--- a/ADMIN_AIT.html
+++ b/ADMIN_AIT.html
@@ -71,7 +71,7 @@
                 <p class="about_content">The administration of a college plays a crucial role in its functioning. It typically includes various departments such as academic affairs, student services, finance, and human resources. Administrators oversee policies, manage resources, and ensure the smooth operation of the institution. They collaborate with faculty and staff to create a positive learning environment, address student needs, and uphold the college's mission. If you have specific questions or aspects you'd like more information on, feel free to ask!.</p>
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-GROUP-PHOTOS%2FGp%20photo%202276%20copy.jpg?alt=media&token=7f04dd9a-f149-488a-943b-d49049426eca">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>
