--- a/ABOUT_US.html
+++ b/ABOUT_US.html
@@ -31,7 +31,7 @@
           </div>
           <div style="display: flex;" class="side">
             <nav id="navele" class="navele">
-            <a href="ABOUT_US.html">About Us</a>
+            <a href="ABOUT_US.html" id="highlight">About Us</a>
             <a href="Admission1.html">Admissions</a>
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
