--- a/Admission1.html
+++ b/Admission1.html
@@ -31,7 +31,7 @@
           <div style="display: flex;" class="side">
             <nav id="navele" class="navele">
             <a href="ABOUT_US.html">About Us</a>
-            <a href="Admission1.html">Admissions</a>
+            <a href="Admission1.html" id="highlight">Admissions</a>
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
