--- a/student.html
+++ b/student.html
@@ -36,7 +36,7 @@
             <a href="ABOUT_US.html">About Us</a>
             <a href="Admission1.html">Admissions</a>
             <a href="ResearchDean.html">Research</a>
-            <a href="student.html">Students</a>
+            <a href="student.html" id="highlight">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
             <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
             </nav>
