--- a/COMP_DEP.html
+++ b/COMP_DEP.html
@@ -20,7 +20,7 @@
           <div>
             <ul class="header_items">
             <a href="ABOUT_US.html">About Us</a>
-            <a href="Alumini.html">Alumini</a>
+            <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
             <a href="ADMIN_AIT.html">Admin</a>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-GROUP-PHOTOS%2FGP%20Photo%202208A.jpg?alt=media&token=9fdf258e-72cf-4a74-9e22-edbee5673bab">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>
