--- a/ENTC_DEPARTMENT.html
+++ b/ENTC_DEPARTMENT.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-GROUP-PHOTOS%2FGp%20photo%202071.jpg?alt=media&token=fb801906-3863-412b-a3af-d467fc0884bb">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>       
