--- a/ResearchDean.html
+++ b/ResearchDean.html
@@ -23,7 +23,7 @@
               <div class="header_head">
                 <ul class="header_items">
                 <a href="index.html">Home</a>
-                <a href="Alumini.html">Alumini</a>
+                <a href="Alumini.html">Alumni</a>
                 <a href="PLACEMENT_T&P.html">Placements</a>
                 <a href="CLUBS.html">Clubs</a>
                 <a href="ADMIN_AIT.html">Admin</a>
