about us responsive

--- a/aboutus/gov.html
+++ b/aboutus/gov.html
@@ -10,10 +10,12 @@
 </div>
 <div class="agb">
     <div class="h25">AIT Governing Body(GB)</div>
-    <div class="agc" style="margin-top: 30px; margin-bottom: 20px; font-size: 1.25rem;">Governing Body of AIT at functional level has been constituted as per AICTE Guidelines</div>
+    <br>
+    <div class="para_containi">Governing Body of AIT at functional level has been constituted as per AICTE Guidelines</div>
+    <br> <br>
     <table>
         <tr class="t11">
-            <th style="width: 280px;">Chairman</th>
+            <th>Chairman</th>
             <th>Chief of Staff, HQ Southern Command, Pune</th>
         </tr>
         <tr>
@@ -86,10 +88,12 @@
 
     </table>
     <div class="h30">Member of College Development Committee</div>
-    <div class="agc">For day to day governance and management there is a College Development Committee as per Maharashtra.</div>
+    <br>
+    <div class=".para_containi">For day to day governance and management there is a College Development Committee as per Maharashtra.</div>
+    <br><br>
     <table>
         <tr class="t11">
-            <th style="width: 280px;">Chairman</th>
+            <th>Chairman</th>
             <th>Chief Signal Officer, HQ Southern Command, Pune</th>
         </tr>
         <tr>
