--- a/aboutus/history.html
+++ b/aboutus/history.html
@@ -8,8 +8,8 @@
                     </ul>
                 </div>
             </div>
-            <div class="ait_history">
-                <h2 style="margin-bottom: 30px;">History of AIT</h2>
+            <div class="director_content">
+                <h2 class="director_ok">History of AIT</h2>
                 <div class="overview">
                     <h2>Overview</h2>
                     <div class="history_con">Army Institute of Technology, Pune (AIT) is an undergraduate engineering college affiliated to the University of Pune. AIT is located at Dighi Hills, Alandi Road area in Pune, Maharashtra, India. Only wards of army personnel are allowed admission. The admission is done through JEE MAINS exam. AIT functions under the aegis of the Army Welfare Education Society (AWES) and has the seniormost officer of the Indian Army, the Chief of Army Staff of the Indian Army (COAS), as the President of its Board of Governors.</div>
