--- a/student.html
+++ b/student.html
@@ -72,7 +72,7 @@
                 AIT students aspire to excel academically, embrace innovation, and lead with integrity. Committed to community engagement and global awareness, they seek to apply their engineering skills ethically for societal benefit. AIT students embody resilience, collaboration, and a passion for continuous learning, shaping a future marked by excellence and positive impact.
             </div>
         <!-- </div> -->
-        
+        </div>
         <div class="about_image">
             <img src="Rectangle 61.png">
         </div>
