NAAC & PLACEMENT responsive done
complete placement responsive
complete naac responsive

--- a/LIBRARY_CONTACT.html
+++ b/LIBRARY_CONTACT.html
@@ -106,9 +106,9 @@
             <div class="generalinfo" >
                 <h2 style="margin-bottom: 30px;">Contact us</h2>
                 <div class="project_more">
-                    <div class="contact1">
+                    <div class="contact1" id="address_tpo">
                         <img src="location.png" alt="">
-                        <p>ARMY INSTITUTE OF TECHNOLOGY ,Dighi Hills,Pune-411015</p>
+                        <p  id="address_tpo">ARMY INSTITUTE OF TECHNOLOGY ,Dighi Hills,Pune-411015</p>
                     </div>
                     </br>
                     <p style="font-size: 1.25rem; color: #4C6BF1;">Librarian</p>
