--- a/NAAC_ADDITIONAL.html
+++ b/NAAC_ADDITIONAL.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -108,41 +108,41 @@
                 
                 <div class="project_more" style="margin-top: 30px;">
                        
-                    <div class="project_link">
+                    <div class="project_link" id="achieve_list">
                         <img src="vector 2.png" alt="">
-                        <a href="" >Student Satisfaction Survey 2021-22</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FStudent%20Satisfaction%20Survey%202021-22.pdf?alt=media&token=0cfb07d2-f252-41fc-97d3-de5f3f3fc1ab" target="_blank">Student Satisfaction Survey 2021-22</a>
                     </div>
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >Best Practices 2021-22</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FBest%20Practices%202021-22.pdf?alt=media&token=00ebf31e-863a-417f-bc72-c864859eba4b" target="_blank">Best Practices 2021-22</a>
                     </div>
 
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FStudent%20Satisfaction%20Survey%202020-21.pdf?alt=media&token=37afeb1d-753a-47c4-927b-22ab24dabfe0" target="_blank">
                             Student Satisfaction Survey 2020-21</a>
                     </div>
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >Program Outcomes (POs) and Program Specific Outcomes (PSO's)</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FProgram%20Outcomes%20and%20PSOs.pdf?alt=media&token=76a14333-e624-4b85-8186-6af5eac4a3be" target="_blank">Program Outcomes (POs) and Program Specific Outcomes (PSO's)</a>
                     </div>
 
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >Best Practices 2019-20</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FBest%20Practices%202019-20.pdf?alt=media&token=3bd7cbfa-f252-4c56-8667-f082bacc2a10" target="_blank">Best Practices 2019-20</a>
                     </div>
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >Student Satisfaction Survey 2019-20</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FStudent%20Satisfaction%20Survey%202019-20.pdf?alt=media&token=95da8e3b-5fd3-4f2d-84b4-01e9e3fb6d4e" target="_blank">Student Satisfaction Survey 2019-20</a>
                     </div>
 
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >Student Satisfaction Survey 2018-19</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FFeeedback%202018-19%20Analysis.pdf?alt=media&token=ad59354b-8575-4b54-9828-4238e72ff018" target="_blank">Student Satisfaction Survey 2018-19</a>
                     </div>
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >Best Practices</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FAdditional%20Information%2FBest%20Practices.pdf?alt=media&token=303aefb8-054e-44ba-8e12-6ebc40d9cd36" target="_blank">Best Practices</a>
                     </div>
                 </div>
             </div>
