--- a/NAAC_SSR.html
+++ b/NAAC_SSR.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -108,7 +108,7 @@
                
                 <div class="project_more" style="margin-top: 30px;">
                        
-                    <div class="project_link">
+                    <div class="project_link" id="achieve_list">
                         <img src="vector 2.png" alt="">
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FSSR%2FSSR_2021.pdf?alt=media&token=82a14230-b7f6-48da-92d4-a703b3e77433" >Self Study Report 2021</a>
                     </div>
