--- a/PLACEMENT_CONTACT.html
+++ b/PLACEMENT_CONTACT.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -106,8 +106,8 @@
             <div class="placement_content">
                 <h2 class="placement_content_heading">Contact Us</h2>
                 <div class="tpo_name">Prof Manoj S Khaladkar (Training & Placement Officer)</div>
-                <div class="contact_con3">
-                    <div class="contact1">
+                <div class="project_more">
+                    <div class="contact1>
                         <img src="location.png" alt="">
                         <p>ARMY INSTITUTE OF TECHNOLOGY ,Dighi Hills,Pune-411015</p>
                     </div>
