--- a/NAAC_CERTIFICATES.html
+++ b/NAAC_CERTIFICATES.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div class="container">
@@ -72,13 +72,13 @@
                 <h2 >Certificates</h2>
                 <div class="project_more" style="margin-top: 30px;">
                        
-                    <div class="project_link">
+                    <div class="project_link" id="achieve_list">
                         <img src="vector 2.png" alt="">
-                        <a href="" >National Assessment and Accreditation Council (Yr 2022)</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FCertificates%2FNAAC%202022_Institutional_Grade_Sheet.pdf?alt=media&token=c1fc63fa-e356-4aa4-b72d-6f454c3e056b"  target="_blank" >National Assessment and Accreditation Council (Yr 2022)</a>
                     </div>
                     <div class="project_link">
                         <img src="vector 2.png" alt="">
-                        <a href="" >National Assessment and Accreditation Council (Yr 2016)</a>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-NAAC%2FCertificates%2F2016%20NAAC%20Certificate%20Nov%202016.pdf?alt=media&token=1a23d063-6286-438e-9dc9-d1f5af776fff" target="_blank" >National Assessment and Accreditation Council (Yr 2016)</a>
                     </div>
                 </div>
             </div>    
