--- a/NAAC_DVV.html
+++ b/NAAC_DVV.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -108,12 +108,12 @@
                 
                 <div class="project_more" style="margin-top: 30px;">
                        
-                    <div class="project_link">
-                        <img src="vector 2.png" alt="">
+                    <div class="project_link" id="achieve_list">
+                        <img src="vector 3.png" alt="">
                         <a href="" >NAAC-SSR-DVV - For Extended Profile Deviations</a>
                     </div>
                     <div class="project_link">
-                        <img src="vector 2.png" alt="">
+                        <img src="vector 3.png" alt="">
                         <a href="" >NAAC-SSR-DVV - For Metric Profile Deviations</a>
                     </div>
                 </div>
