--- a/PLACEMENT_ACTIVITIES.html
+++ b/PLACEMENT_ACTIVITIES.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -108,7 +108,7 @@
                 <div class="placement_t_record">
                     <h3 class="placement_objectives_heading" style="margin-bottom: 1.25rem;">Seminars/ Workshops/ Guest Lectures Organised by T&P Cell</h3>
                     <div class="project_more">
-                        <div class="project_link">
+                        <div class="project_link" id="achieve_list">
                             <img src="vector 2.png" alt="">
                             <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-PLACEMENT%2FPLACEMENT-ACTIVITIES%2FSeminar%20Training%20%202022%20-%202023.pdf?alt=media&token=218f01d8-12b6-406c-a041-366d1bbe64e9" target="_blank">2022-23</a>
                         </div>
