--- a/PLACEMENT_DETAIL.html
+++ b/PLACEMENT_DETAIL.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -107,7 +107,7 @@
                 <h2 class="placement_content_heading">Placement Details</h2>
 
                 <div class="project_more">
-                    <div class="project_link">
+                    <div class="project_link" id="achieve_list">
                         <img src="vector 2.png" alt="">
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-PLACEMENT%2FAIT-PLACEMENT%20DETAILS%2FPlmt%20Details%202022-23.pdf?alt=media&token=e397e04e-7a70-4462-ab1e-31cc45c00049" target="_blank">Placements: B.E : 2022-23</a>
                     </div>
