NIRF,NEP,NAAC,ARIIA make responsive

--- a/ASGE_HOD_DESk.html
+++ b/ASGE_HOD_DESk.html
@@ -23,7 +23,7 @@
             <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
-            <a href="ADMIN_AIT.html">Admin</a>
+            <a href="index.html#department_nav">Departments</a>
             </ul>
           </div>
         </div>
@@ -58,7 +58,7 @@
       <div class="empty" style="height: 120px;width: 100%;"></div>
     <div class="header3">
             <div class="show">
-                <p class="a">Applied Science & General Engineering</p>
+                <p class="a" id="overflow_name">Applied Science & General Engineering</p>
                 <p class="b"> "Where theory meets application, our department sparks innovation for a brighter future." </p>
                 <p class="c"> <a href="#mainContent">Explore</a> </p>
             </div>
