--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <div class="topper">
       <div>
         <ul class="header_items">
-        <a href="ABOUT_US.html">About Us</a>
+        <a href="index.html" id="highlight_items">Home</a>
         <a href="Alumini.html">Alumni</a>
         <a href="PLACEMENT_T&P.html">Placements</a>
         <a href="CLUBS.html">Clubs</a>
-        <a href="ADMIN_AIT.html">Admin</a>
+        <a href="#department_nav">Departments</a>
         </ul>
       </div>
     </div>
@@ -87,7 +87,7 @@
   </div>
 
   <!-- ///////////////////////////////////////////////////////////////////////////////////////////////// -->
-  <div class="Departments">
+  <div class="Departments" id="department_nav">
     <h1 align="center" style="color: #0C2695;">Departments</h1>
     <p>Navigate through the diverse academic landscape of our college by exploring the unique offerings and specialties of each department.</p>
     <div class="card-container">
@@ -240,13 +240,13 @@
       <div class="logo">
       <div class="logoimg"><img src="diamond.png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u ><a  href="Mandatory.html">Mandatory</a></u></div>
+      <div class="linkinfo"><u ><a  href="Mandatory.html" style="color: white;" >Mandatory</a></u></div>
     </div>
     <div class="row">
       <div class="logo">
         <div class="logoimg"><img src="hexagon (1).png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u>NIRF</u></div>
+      <div class="linkinfo"><u><a href="NIRF.html" style="color: white;">NIRF </a></u></div>
     </div>
     <div class="row">
       <div class="logo">
@@ -264,13 +264,13 @@
       <div class="logo">
         <div class="logoimg"><img src="diamond.png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u >ARIIA</u></div>
+      <div class="linkinfo"><u ><a href="ARIIA.html" style="color: white;"> ARIIA </a></u></div>
     </div>
     <div class="row">
       <div class="logo">
         <div class="logoimg"><img src="hexagon (1).png" alt="logo" height="40px" width="40px"></div>
       </div>
-      <div class="linkinfo"><u >NEP</u></div>
+      <div class="linkinfo"><u > <a href="NEP.html" style="color: white;">NEP </a></u></div>
     </div>
     </div>
   </div>
