--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -19,11 +19,11 @@
         <div class="topper">
           <div>
             <ul class="header_items">
-            <a href="ABOUT_US.html">About Us</a>
+            <a href="index.html">Home</a>
             <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
-            <a href="ADMIN_AIT.html">Admin</a>
+            <a href="index.html#department_nav">Departments</a>
             </ul>
           </div>
         </div>
