--- a/ADMIN_JD.html
+++ b/ADMIN_JD.html
@@ -119,8 +119,8 @@
             <div id="specificContent">
                 <div id="hod_content">
                     <h2 class="head_ok">Joint Director’s Corner</h2>
-                        <div class="hod_content2">
-                            <div class="hod_pic" style="border: none;"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-IMAGES%2Fman.png?alt=media&token=e9335016-9aba-4c01-b649-d68a1d4f78f9">
+                        <div class="hod_content2" id="jd_pic2">
+                            <div id="jd_pic"><img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-JD%20pic%2F1R9A2275.jpg?alt=media&token=67eab8a9-8797-42ea-8278-97ad2ffd1778" >
                         
                             </div>
                             <div class="hod_contain" id="director_pic">
