--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -95,7 +95,7 @@
                     <a href="Departments/MECH/MECH_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                     <a href="Departments/MECH/MECH_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="Departments/MECH/MECH_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
-                    <a href="Departments/MECH/MECH_SPECIAL.html" class="fetchLink" data-elementid="activity_content">Special Services</a>
+                    <a href="MECH_SPECIAL.html" class="fetchLink" data-elementid="activity_content">Special Services</a>
                     <a href="Departments/MECH/MECH_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
                     <a href="Departments/MECH/MECH_ACHIEVEMENT.html" class="fetchLink" data-elementid="timetable">Achievement and Messages</a>
                     <a href="Departments/MECH/MECH_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
