--- a/Alumini_login.html
+++ b/Alumini_login.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -106,8 +106,12 @@
                
             <div class="alumini_content">
                 <h2 class="alumini_content_heading">Alumni Login</h2>
-                <div class="alumini_login">
-                    <a href="https://alumni.aitpune.edu.in/" id="but">Click Me</a><p style="margin-top: 1rem; font-weight: 500;">For Alumini Login</p>
+                <div class="alumini_login" id="login_karo">
+                    <p id="login_alumni">Login in Alumni :</p>
+                    <div class="elib_button" id="E-button">
+
+                        <a href="https://alumni.aitpune.edu.in/" id="but">Click Me</a>
+                    </div>
                 </div>
             </div>
 
