--- a/Alumini_meetreport.html
+++ b/Alumini_meetreport.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="Admission.css">
+    <link rel="stylesheet" href="IT.css">
 </head>
 <body>
     <div style="position: fixed; width: 100%; z-index: 10;">
@@ -107,7 +107,7 @@
                 <h2 class="alumini_content_heading">Alumni Meet Reports</h2>
 
                 <div class="project_more">
-                    <div class="project_link">
+                    <div class="project_link" id="achieve_list">
                         <img src="vector 2.png" alt="">
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/Ait-Alumini%2FAlumini-MeetReport%2FAlumniMeet2015.pdf?alt=media&token=8e801f5c-5728-4e93-86a3-16a585ed8024" target="_blank">2015</a>
                     </div>
