--- a/IT_DEPARTMENT.html
+++ b/IT_DEPARTMENT.html
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FFACULTY%20%26%20STAFF%2Fit.jpg?alt=media&token=d4d9e9d8-9fea-44b7-924e-199dcb167983">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>
