--- a/ABOUT_US.html
+++ b/ABOUT_US.html
@@ -15,8 +15,8 @@
         <div class="topper">
           <div>
             <ul class="header_items">
-            <a href="ABOUT_US.html">About Us</a>
-            <a href="Alumini.html">Alumini</a>
+            <a href="index.html">Home</a>
+            <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
             <a href="ADMIN_AIT.html">Admin</a>
@@ -32,7 +32,7 @@
     
           <div style="display: flex;" class="side">
             <nav id="navele" class="navele">
-            <a href="ABOUT_US.html">About Us</a>
+            <a href="ABOUT_US.html" id="highlight">About Us</a>
             <a href="Admission1.html">Admissions</a>
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
@@ -54,10 +54,12 @@
     
 
     <div class="empty" style="height: 120px;"></div>
-
-    <div class="camp">
-        <div class="about">About Us</div>
-        <div class="about1">AIT offering high-quality technical education and fostering innovation and excellence in its students.</div>
+    <div class="header3">
+        <div class="show">
+            <p class="a">About Us</p>
+            <p class="b">AIT offering high-quality technical education and fostering innovation and excellence in its students.</p>
+            <p class="c"> <a href="#contentContainer">Explore</a> </p>
+        </div>
     </div>
 
     <div class="about_us">
