--- a/student.html
+++ b/student.html
@@ -16,8 +16,8 @@
         <div class="topper">
           <div>
             <ul class="header_items">
-            <a href="ABOUT_US.html">About Us</a>
-            <a href="Alumini.html">Alumini</a>
+            <a href="index.html">Home</a>
+            <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
             <a href="ADMIN_AIT.html">Admin</a>
@@ -36,7 +36,7 @@
             <a href="ABOUT_US.html">About Us</a>
             <a href="Admission1.html">Admissions</a>
             <a href="ResearchDean.html">Research</a>
-            <a href="student.html">Students</a>
+            <a href="student.html" id="highlight">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
             <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
             </nav>
@@ -55,12 +55,13 @@
     
 
     <div class="empty" style="height: 120px;"></div>
-
-    <div class="camp">
-        <div class="about">Students</div>
-        <div class="about1">"Unleash your potential at AIT – a hub of opportunities, innovation, and support for your academic journey."</div>
+    <div class="header3">
+        <div class="show">
+            <p class="a">Students</p>
+            <p class="b">"Unleash your potential at AIT – a hub of opportunities, innovation, and support for your academic journey."</p>
+            <p class="c"> <a href="#contentContainer">Explore</a> </p>
+        </div>
     </div>
-
     
     <div class="about_us">
         <div class="main_content">
