--- a/nbafacultyinfo.html
+++ b/nbafacultyinfo.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link rel="stylesheet" href="ADMIN.css">
+<link rel="stylesheet" href="IT.css">
 
 </head>
 <body>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="camp">
-            <div class="about">Adminstration</div>
+            <div class="about">National Board of Accreditation (NBA)</div>
             <div class="about1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc malesuada massa at scelerisque.</div>
         </div>
     
