--- a/student/Scholarship/sd-loan.html
+++ b/student/Scholarship/sd-loan.html
@@ -33,7 +33,7 @@
                         <p>Education Loan Scheme for Serving Pers/ Their Wards/ Dependents Sisters</p>
                     </div>
                     <div class="reading_more">
-                        <button href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FEdn%20Loan%20Scheme%20for%20Ser%20Pers%20and%20Wards2023.pdf?alt=media&token=0bd2a6f8-3dbe-4a08-989e-17590da31555" id="but">Read More</button>
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FEdn%20Loan%20Scheme%20for%20Ser%20Pers%20and%20Wards2023.pdf?alt=media&token=0bd2a6f8-3dbe-4a08-989e-17590da31555" id="but">Read More</a>
                     </div>
                     <div class="border_gap"></div>
             </div>
@@ -44,7 +44,7 @@
                     <p>Education Loan to student of AIT, SBI Scholar Loan Scheme</p>
                </div>
                 <div class="reading_more">
-                    <button href="https://www.aitpune.com/Notices/Sports%20Aakriti%202023%20-%2024%20Non%20Instructional%20Day.pdf" id="but">Read More</button>
+                    <a href="https://www.aitpune.com/Notices/Sports%20Aakriti%202023%20-%2024%20Non%20Instructional%20Day.pdf" id="but">Read More</a>
                 </div>
                 <div class="border_gap"></div>
             </div>
@@ -55,7 +55,7 @@
                      <p>Simplified Format of Education Loan Application</p>
                 </div>
                  <div class="reading_more">
-                     <button href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FSimplified%20Education%20Loan%20Application%203.pdf?alt=media&token=d0ce38d6-3349-48e5-b0a4-f81d12de5a1f" id="but">Read More</button>
+                     <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FSimplified%20Education%20Loan%20Application%203.pdf?alt=media&token=d0ce38d6-3349-48e5-b0a4-f81d12de5a1f" id="but">Read More</a>
                  </div>
                  <div class="border_gap"></div>
              </div>
@@ -66,7 +66,7 @@
                      <p>Indian Army Education Loan Scheme</p>
                 </div>
                  <div class="reading_more">
-                     <button href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FEDN_LOAN%204.pdf?alt=media&token=20fe8443-7f61-4692-a20a-04cb1323ff5a" id="but">Read More</button>
+                     <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FEDN_LOAN%204.pdf?alt=media&token=20fe8443-7f61-4692-a20a-04cb1323ff5a" id="but">Read More</a>
                  </div>
                  <div class="border_gap"></div>
              </div>
@@ -77,7 +77,7 @@
                      <p>Bank of Baroda Education Loan</p>
                 </div>
                  <div class="reading_more">
-                     <button href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FNotice%2090_2022%205.pdf?alt=media&token=8d0a88cf-b924-404b-b7c1-6b607013167b" id="but">Read More</button>
+                     <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FNotice%2090_2022%205.pdf?alt=media&token=8d0a88cf-b924-404b-b7c1-6b607013167b" id="but">Read More</a>
                  </div>
                  <div class="border_gap"></div>
              </div>
@@ -88,7 +88,7 @@
                      <p>PNB Education Loan</p>
                 </div>
                  <div class="reading_more">
-                     <button href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FPNB%20Education%20Loan.pdf?alt=media&token=15abf593-4bd4-4370-a6e2-30753b7690c8" id="but">Read More</button>
+                     <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FPNB%20Education%20Loan.pdf?alt=media&token=15abf593-4bd4-4370-a6e2-30753b7690c8" id="but">Read More</a>
                  </div>
                  <div class="border_gap"></div>
              </div>
@@ -99,7 +99,7 @@
                      <p>SBI Scholar Loan scheme</p>
                 </div>
                  <div class="reading_more">
-                     <button href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FInterest%20Rate%20%26%20%20Contact%20Details%20SBI%20EDU%20Loan%20Jul%2021%207.pdf?alt=media&token=f4ea6964-640c-4939-a1ec-febf826d72d8" id="but">Read More</button>
+                     <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-STUDENTS%2FEDUCATION-LOANS%2FInterest%20Rate%20%26%20%20Contact%20Details%20SBI%20EDU%20Loan%20Jul%2021%207.pdf?alt=media&token=f4ea6964-640c-4939-a1ec-febf826d72d8" id="but">Read More</a>
                  </div>
                  <div class="border_gap"></div>
              </div>
