--- a/Admission1.html
+++ b/Admission1.html
@@ -35,7 +35,7 @@
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
-            <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+            <a href="https://www.awesindia.com/"> <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
             </nav>
           </div>
           <div class="hamburger" onclick="menuView()">
@@ -87,7 +87,7 @@
         </div>
         <div class="rectangle_blue"></div>
         <div class="about_image">
-            <img src="Rectangle 61.png">
+            <img src="./assets/home/b.png" style="border-radius: 16px;">
         </div>
     </div>
     <div class="main">
