--- a/Alumini.html
+++ b/Alumini.html
@@ -41,7 +41,7 @@
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
-            <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+            <a href="https://www.awesindia.com/"> <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
             </nav>
           </div>
     
@@ -79,7 +79,7 @@
             </div>
             <div id="box_hide" onclick="change_view()"></div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2FALUMNI.JPG?alt=media&token=ac684071-08e5-449f-a328-038c0b4d9c05">
             </div>
         </div>
     <div class="main">
