--- a/Mandatory.html
+++ b/Mandatory.html
@@ -35,7 +35,7 @@
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
-            <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+            <a href="https://www.awesindia.com/"> <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
             </nav>
           </div>
           <div class="hamburger" onclick="menuView()">
@@ -75,7 +75,7 @@
         </div>
         <div class="rectangle_blue"></div>
         <div class="about_image">
-            <img src="Rectangle 61.png">
+            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2Fresearch.JPG?alt=media&token=5712f393-b5e3-489c-be8b-be6e516cc79c" style="border-radius: 16px;">
         </div>
     </div>
 
