--- a/ABOUT_US.html
+++ b/ABOUT_US.html
@@ -37,7 +37,7 @@
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
-            <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+            <a href="https://www.awesindia.com/"> <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
             </nav>
           </div>
     
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="about_image">
-            <img src="Rectangle 61.png">
+            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2Fabout_us.jpg?alt=media&token=bce99d56-fe5e-4776-a215-0738f8f4bb41">
         </div>
     </div>
 
