--- a/ENTC_DEPARTMENT.html
+++ b/ENTC_DEPARTMENT.html
@@ -41,7 +41,7 @@
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
-            <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+            <a href="https://www.awesindia.com/"> <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
             </nav>
           </div>
     
