--- a/PLACEMENT_T&P.html
+++ b/PLACEMENT_T&P.html
@@ -41,7 +41,7 @@
             <a href="ResearchDean.html">Research</a>
             <a href="student.html">Students</a>
             <a href="ADMIN_AIT.html">Admin</a>  
-            <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" >
+            <a href="https://www.awesindia.com/"> <img src="awes.jpg" alt="" id="always" style="height: 50px; margin-bottom: 15px;" ></a>
             </nav>
           </div>
     
@@ -80,7 +80,7 @@
                 
             </div>
             <div class="about_image">
-                <img src="Rectangle 61.png">
+                <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/DRONE%20-PICS%2FDJI_0177-1%20copy.jpg?alt=media&token=c32d5928-fb38-431b-b817-094b7af676a7">
             </div>
         </div>
         <div id="box_hide" onclick="change_view()"></div>
