--- a/Departments/COMP/COMP_RESULT.html
+++ b/Departments/COMP/COMP_RESULT.html
@@ -117,10 +117,10 @@
                 <h3 class="result_of_se">Result Analysis</h3>
                 <div class="result_analysis">
                     <div class="result_img">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-RESULT%2Fimage_2024-02-04_19-52-46.png?alt=media&token=ac658ec4-c649-4962-bb6a-4a4a011826ce" alt="">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-RESULT%2Fcomp2.png?alt=media&token=cdcd1df7-a759-4f40-84de-659fc0c1b639" alt="">
                     </div>
                     <div class="result_img">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-RESULT%2Fimage_2024-02-04_19-57-27.png?alt=media&token=cf5ce5c9-7f98-456a-94f2-deace43dd8a3" alt="">
+                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-COMP%2FCOMP-RESULT%2Fcomp1.png?alt=media&token=9cd75ef0-a2b9-4e6f-a7b1-6395c027c0b0" alt="">
                     </div>
                 </div>
                 
