--- a/Departments/IT/IT_RESULT.html
+++ b/Departments/IT/IT_RESULT.html
@@ -128,10 +128,10 @@
                     <h3 class="result_of_se">Result Analysis</h3>
                     <div class="result_analysis">
                         <div class="result_img">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-RESULT%2Fimage%20(2).png?alt=media&token=b4176eea-19c4-4faf-9885-321b81dc1c44" alt="">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-RESULT%2Fimage_2024-02-11_22-21-59.png?alt=media&token=1af0b889-056f-4d71-ba06-87dc9b2c7cd8" alt="">
                         </div>
                         <div class="result_img">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-RESULT%2F41441552537.png?alt=media&token=c11e2b62-6c07-4bc2-837d-15ea1b318080" alt="">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IT%2FIT-RESULT%2Fit2.png?alt=media&token=9d1810b3-79d6-42ca-b02d-d307768822a6" alt="">
                         </div>
                     </div>
 
