--- a/Departments/ENTC/ENTC_RESULT.html
+++ b/Departments/ENTC/ENTC_RESULT.html
@@ -116,10 +116,10 @@
                 <h3 class="result_of_se">Result Analysis</h3>
                     <div class="result_analysis">
                         <div class="result_img">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_RESULT%2Fimage_2024-02-04_20-14-18.png?alt=media&token=9eac111b-f1e2-46c9-be13-fafb7eeb73a5" alt="">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_RESULT%2Fentc1.png?alt=media&token=d64195c8-97e0-4eab-ad80-2eb49fb5d251" alt="">
                         </div>
                         <div class="result_img">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_RESULT%2Fimage%20(4).png?alt=media&token=7533afd5-2029-4035-857d-2e9300410b7f" alt="">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_RESULT%2Fentc2.png?alt=media&token=ca5041fe-a971-46a4-badf-8d41af9bb3ce" alt="">
                         </div>
                     </div>
                 <h3 class="result_of_se">SE Electronic & Telecommunication 2022-23</h3>
