--- a/mous.html
+++ b/mous.html
@@ -99,7 +99,7 @@
             
                 <h2>MoUs</h2>
                 <p class="act_con">MOUs Signed with well known Industries</p>
-                <div class="indp" style="height: 10rem;">
+                <div class="indp" style="height: auto;">
                     <div class="indp_content">
                         <div class="indc1">
                             Electronics and Telecommunication
@@ -117,7 +117,7 @@
                 </div>
 
 
-                <div class="indp" style="height: 10rem;">
+                <div class="indp" style="height: auto;">
                     <div class="indp_content">
                         <div class="indc1">
                             Information Technology
@@ -134,7 +134,7 @@
                 </div>
 
 
-                <div class="indp-mech">
+                <div class="indp">
                     <div class="indp_content">
                         <div class="indc1">
                             Mechanical Engineering
@@ -153,7 +153,7 @@
                 </div>
 
 
-                <div class="indp-comp">
+                <div class="indp">
                     <div class="indp_content">
                         <div class="indc1">Computer Engineering</div>
                         <div class="tab extra-margin">
