--- a/funded.html
+++ b/funded.html
@@ -214,7 +214,7 @@
                     </div>
     
     
-                    <div class="indp-comp" style="height: 12rem;">
+                    <div class="indp" style="height: 12rem;">
                         <div class="indp_content">
                             <div class="indc1">Computer Engineering</div>
                             <div class="tab">
