--- a/patents.html
+++ b/patents.html
@@ -100,7 +100,7 @@
             
                 <h2>Patents/Copyrights</h2>
                 <p class="act_con">Patents And Copyrights By Different Departments</p>
-                <div class="indp-entc" style="height: 18rem;">
+                <div class="indp" style="height: auto">
                     <div class="indp_content">
                         <div class="indc1">
                             Electronics and Telecommunication
@@ -144,7 +144,7 @@
                 </div>
 
 
-                <div class="indp" style="height: 12rem;">
+                <div class="indp" style="height: auto;">
                     <div class="indp_content">
                         <div class="indc1">
                             Information Technology
@@ -177,7 +177,7 @@
                 </div>
 
 
-                <div class="indp" style="height: 12rem;">
+                <div class="indp" style="height: auto;">
                     <div class="indp_content" >
                         <div class="indc1">
                             Mechanical Engineering
@@ -209,7 +209,7 @@
                 </div>
 
 
-                <div class="indp" style="height: 10rem;">
+                <div class="indp" style="height: auto;">
                     <div class="indp_content">
                         <div class="indc1">Computer Engineering</div>
                         <div class="tab">
@@ -236,7 +236,7 @@
                 </div>
 
 
-                <div class="indp" style="height: 10rem;">
+                <div class="indp" style="height: auto;">
                     <div class="indp_content">
                         <div class="indc1">
                             Applied Science and General Engineering
