--- a/activities.html
+++ b/activities.html
@@ -99,7 +99,7 @@
             
                 <h2>Activities</h2>
                 <p class="act_con">Immerse yourself in a world of innovation and discovery as you explore the diverse range of research activities propelling our institution forward.</p>
-                <div class="indp" style="height: 10rem;">
+                <div class="indp" style="height: auto;">
                     <div class="indp_content" >
                         <div class="indc1">Activities</div>
                         <div class="tab">
@@ -123,7 +123,7 @@
                 </div>
 
 
-                <div class="indp" style="height: 8rem;">
+                <div class="indp" style="height:auto;">
                     <div class="indp_content">
                         <div class="indc1">FDP Conducted</div>
                         <div class="tab">
