--- a/RandD.html
+++ b/RandD.html
@@ -98,9 +98,9 @@
             </section>
            <div id="specificContent">
             <div id="industrial_visit-rd" >
-                <h1>
-                    R&D Proposals /Opportunities  
-                </h1>
+                <h2>
+                    R&D Proposals
+                </h2>
                 <p>Research and Development Opportunities</p>
                 <div class="industrial_visit_links-rd" >
 
