some changes in department page

--- a/COMP_DEP.html
+++ b/COMP_DEP.html
@@ -96,7 +96,7 @@
                     <a href="Departments/COMP/COMP_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                     <a href="Departments/COMP/COMP_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="Departments/COMP/COMP_ACTIVITIES.html" class="fetchLink" data-elementid="RandD">Activities</a>
-                    <a href="Departments/COMP/COMP_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
+                    <!-- <a href="Departments/COMP/COMP_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a> -->
                     <a href="Departments/COMP/COMP_ACHIEVEMENT.html" class="fetchLink" data-elementid="timetable">Achievements/ Messages</a>
                     <a href="Departments/COMP/COMP_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
                     <a href="Departments/COMP/COMP_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
