--- a/Departments/COMP/COMP_ACHIEVEMENT.html
+++ b/Departments/COMP/COMP_ACHIEVEMENT.html
@@ -115,7 +115,7 @@
 
                 <div class="project_more">
                     <div class="project_link" id="achieve_list">
-                        <ul class="Industry_list">
+                        <ul class="Industry_list" id="comp_actvity">
                             <li>Department of Computer Engineering got NBA accreditation of 3 years.</li>
                             <li>Recently received research grant of Rs. 7 Cr from central government.</li>
                             <li>Faculty have published 40 research papers and 8 patents since July 2019.</li>
@@ -125,7 +125,7 @@
 
                 <div class="project_more">
                     <div class="project_link" id="achieve_list">
-                        <ul class="Industry_list">
+                        <ul class="Industry_list" id="comp_actvity">
                             <li>Arjun Dashrath (SE Comp) won the Best Research Paper Award in conference ‘Indian Engineering Congress’.</li>
                             <li>First Position at Smart India Hackathon 2020.</li>
                         </ul>
