--- a/Departments/COMP/COMP_ACTIVITIES.html
+++ b/Departments/COMP/COMP_ACTIVITIES.html
@@ -120,7 +120,7 @@
 
                 <div class="project_more">
                     <div class="project_link" id="achieve_list">
-                        <ul class="Industry_list">
+                        <ul class="Industry_list" id="comp_actvity">
                             <li>Various activities such as workshops on Java, Open GL, .NET etc</li>
                             <li>Active participation of students in various activities.</li>
                             <li>Mini projects on Android Application Development , Embedded System.</li>
