--- a/Departments/COMP/COMP_INDUSTRY.html
+++ b/Departments/COMP/COMP_INDUSTRY.html
@@ -123,7 +123,7 @@
                     <div class="project_more">
                         <p id="mous">MoUs</p>
                         <div class="project_link" id="achieve_list">
-                            <ul class="Industry_list">
+                            <ul class="Industry_list" id="comp_actvity">
                                 <li>Texas Instruments provide Kits for IOT based applications</li>
                                 
                                 <li>Forty two Technology Innovations Pvt. Ltd .</li>
