--- a/Departments/COMP/COMP_PROJECT.html
+++ b/Departments/COMP/COMP_PROJECT.html
@@ -224,9 +224,9 @@
                 </div> -->
                 
                 <div id="RandD" style="margin-top: 1rem; margin-left: 0px;">
-                <h3 style="margin-bottom: 1.4rem;">
+                <h5 style="margin-bottom: 1.4rem;" id="discover">
                     Discover more Projects
-                </h3>
+                </h5>
                
                 <div class="pub">
                     <h3 style="font-size: 1.4rem;">
