--- a/Departments/ENTC/ENTC_INDUSTRY.html
+++ b/Departments/ENTC/ENTC_INDUSTRY.html
@@ -115,9 +115,9 @@
                         Industry Institute Interaction  
                     </h2>
                     <div class="visit_contain1">
-                        <h3>Industry Sponsored Labs</h3>
+                        <h3 id="discover">Industry Sponsored Labs</h3>
                         <div class="project_more">
-                            <ul class="Industry_list">
+                            <ul class="Industry_list" id="comp_actvity">
                                 <li>Product Innovation Lab by 3DPLM</li>
                                 <li>Innovation and Development Center by Robu.in</li>
                                 <li>Aeron Systems, Pune support for projects and internships.</li>
