--- a/Departments/MECH/MECH_LAB.html
+++ b/Departments/MECH/MECH_LAB.html
@@ -199,11 +199,14 @@
                         <div class="util-for1">Heat Transfer, Basic Mechanical Engineering</div>
                         <div class="utilization">Utilization of Laboratory:</div>
                         <div class="util-for1">First (All Branches) and Third Year</div>
-                        <div class="view_more">
-                            <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-LAB%2FLaboratories.pdf?alt=media&token=31487088-dbc1-4426-9555-3692e3219e85" target="_blank" id="but">More Laboratries</a>
-                        </div>
                     </div>
                     
+                </div>
+
+                <div class="laboratory_button">
+                    <div class="elib_button" id="E-button">
+                        <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-LAB%2FLaboratories.pdf?alt=media&token=31487088-dbc1-4426-9555-3692e3219e85" target="_blank" id="but">More Laboratries</a>
+                    </div>
                 </div>
 
 
