--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -23,7 +23,7 @@
             <a href="Alumini.html">Alumni</a>
             <a href="PLACEMENT_T&P.html">Placements</a>
             <a href="CLUBS.html">Clubs</a>
-            <a href="index.html#department_nav">Departments</a>
+            <a href="index.html#department_nav" id="highlight_items">Departments</a>
             </ul>
           </div>
         </div>
@@ -125,7 +125,6 @@
                             <p>PEO2: Enable students to lead and work as part of teams engaged in multi disciplinary research and projects</p>
                             <br>
                             <p>PEO3: Instill integrity, ethics and life skills in students to take on diverse roles</p>
-                            <br>
                            
                         </div>
                         <div class="pos">
