--- a/Departments/ENTC/ENTC_ACHIEVENT.html
+++ b/Departments/ENTC/ENTC_ACHIEVENT.html
@@ -165,7 +165,7 @@
                     </div>
                     <div class="project_more">
                         <div class="project_link" id="achieve_list">
-                            <ul class="Industry_list">
+                            <ul class="Industry_list" id="comp_actvity">
                                 <li>Akash Saxena, SE E&TC won 1st prize in Hackathon, Beach Hack on Devfolio</li>
                                 <li>Amit Joshi, Ayush Mani Tripathi & Priya Pandey, TE E&TC won Smart India Hackathon 2020 (Hardware Edition) with prize money of Rs. 1 Lakh, Government of Goa</li>
                                 <li>Shuvam Kumar, TE E&TC won 1st prize in Great Hackathon '18, Hackerearth.</li>
