--- a/ENTC_DEPARTMENT.html
+++ b/ENTC_DEPARTMENT.html
@@ -95,7 +95,7 @@
                     <a href="Departments/ENTC/ENTC_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                     <a href="Departments/ENTC/ENTC_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="Departments/ENTC/ENTC_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
-                    <a href="Departments/ENTC/ENTC_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
+                    <!-- <a href="Departments/ENTC/ENTC_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a> -->
                     <a href="Departments/ENTC/ENTC_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
                     <a href="Departments/ENTC/ENTC_ACHIEVENT.html" class="fetchLink" data-elementid="activity_content">Achievements/ Messages</a>
                     <a href="Departments/ENTC/ENTC_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
