--- a/IT_DEPARTMENT.html
+++ b/IT_DEPARTMENT.html
@@ -60,7 +60,7 @@
             <div class="show">
                 <p class="a">Information Technology</p>
                 <p class="b"> "Empowering Campus Innovation Through Technology." </p>
-                <p class="c"> <a href="#main">Explore</a> </p>
+                <p class="c"> <a href="#mainContent">Explore</a> </p>
             </div>
         </div>
        
@@ -96,7 +96,6 @@
                     <a href="Departments/IT/IT_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="Departments/IT/IT_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
                     <a href="Departments/IT/IT_SPECIAL.html" class="fetchLink" data-elementid="activity_content">Special Services</a>
-                    <a href="Departments/IT/IT_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
                     <a href="Departments/IT/IT_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
                     <a href="Departments/IT/IT_ACHIEVEMENT.html" class="fetchLink" data-elementid="activity_content">Achievements/ Messages</a>
                     <a href="Departments/IT/IT_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
